; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_getparam.c_GetFileAndPassword.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_getparam.c_GetFileAndPassword.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8**, i8**)* @GetFileAndPassword to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @GetFileAndPassword(i8* %0, i8** %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @parse_cert_parameter(i8* %9, i8** %7, i8** %8)
  %11 = load i8**, i8*** %5, align 8
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @Curl_safefree(i8* %12)
  %14 = load i8*, i8** %7, align 8
  %15 = load i8**, i8*** %5, align 8
  store i8* %14, i8** %15, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %3
  %19 = load i8**, i8*** %6, align 8
  %20 = load i8*, i8** %19, align 8
  %21 = call i32 @Curl_safefree(i8* %20)
  %22 = load i8*, i8** %8, align 8
  %23 = load i8**, i8*** %6, align 8
  store i8* %22, i8** %23, align 8
  br label %24

24:                                               ; preds = %18, %3
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @cleanarg(i8* %25)
  ret void
}

declare dso_local i32 @parse_cert_parameter(i8*, i8**, i8**) #1

declare dso_local i32 @Curl_safefree(i8*) #1

declare dso_local i32 @cleanarg(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
